--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.juzhang.bicycle.Activity.LoginActivity">
+    tools:context="com.example.juzhang.bicycle.Activity.RegisterActivity">
     <RelativeLayout
         android:id="@+id/home_head"
         android:layout_width="match_parent"
@@ -43,11 +43,19 @@
         android:hint="@string/tv_pleaseinputpassword"
         style="@style/EditTextStyle" />
     <com.example.juzhang.bicycle.View.ClearEditText
-        android:id="@+id/cet_register_qq"
+        android:id="@+id/cet_register_comfirmpassword"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:drawableLeft="@drawable/icon_qq_m"
-        android:hint="@string/tv_inputqq"
+        android:drawableLeft="@drawable/icon_lock_m"
+        android:inputType="textPassword"
+        android:hint="@string/tv_pleasecomfirmpassword"
+        style="@style/EditTextStyle" />
+    <com.example.juzhang.bicycle.View.ClearEditText
+        android:id="@+id/cet_register_mobile"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:drawableLeft="@drawable/icon_mobile_m"
+        android:hint="@string/tv_inputphone"
         style="@style/EditTextStyle" />
     <com.example.juzhang.bicycle.View.ClearEditText
         android:id="@+id/cet_register_email"
@@ -56,6 +64,13 @@
         android:drawableLeft="@drawable/icon_email_m"
         android:hint="@string/tv_inputemail"
         style="@style/EditTextStyle" />
+    <com.geetest.sdk.GT3GeetestButton
+        android:id="@+id/ggb_verify"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_height="44dp"
+        android:gravity="center" />
     <LinearLayout
         android:layout_margin="20dp"
         android:gravity="center"
