1.完善极验验证 2.完善用户信息管理

--- a/app/src/main/res/layout/activity_user_message.xml
+++ b/app/src/main/res/layout/activity_user_message.xml
@@ -102,7 +102,7 @@
                 android:onClick="buttonClick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                juzhang:name="电话号码"
+                juzhang:name="手机号"
                 juzhang:usertext="" />
 
             <com.example.juzhang.bicycle.View.MyUserMessageItemView
