--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -109,6 +109,33 @@
                 />
         </RelativeLayout>
     </LinearLayout>
+    <LinearLayout
+        android:layout_above="@+id/btn_paytype_confirm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/s_needpay"
+            android:textSize="18sp"
+            />
+        <TextView
+            android:id="@+id/tv_paytype_countprice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="#F00"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="0.0"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="元"
+            android:textSize="18sp"
+            />
+    </LinearLayout>
     <!--确认支付-->
     <Button
         android:id="@+id/btn_paytype_confirm"
