--- a/app/src/main/res/layout/item_rental_carmessage.xml
+++ b/app/src/main/res/layout/item_rental_carmessage.xml
@@ -12,18 +12,21 @@
     >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="76dp">
         <com.loopj.android.image.SmartImageView
             android:layout_gravity="center_vertical"
             android:id="@+id/iv_rental_item_carpicture"
             android:padding="5dp"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
             android:contentDescription="@string/iv_picture"
             />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_weight="2"
+            android:layout_width="0dp"
             android:layout_height="match_parent">
 
             <LinearLayout
